--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,25 +1,32 @@
-<% provide(:title, "Edit Book Information") %>
-<h1>Update Book Information</h1>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@book) do |f| %>
-      <%= render 'shared/book_error_messages' %>
+<%= if current_user.adimin? %>
+  <% provide(:title, "Edit Book Information") %>
+  <h1>Update Book Information</h1>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+      <%= form_for(@book) do |f| %>
+        <%= render 'shared/book_error_messages' %>
 
-      <%= f.label :title %>
-      <%= f.text_field :title, class: 'form-control' %>
+        <%= f.label :title %>
+        <%= f.text_field :title, class: 'form-control' %>
 
-      <%= f.label :author %>
-      <%= f.text_field :author, class: 'form-control' %>
+        <%= f.label :author %>
+        <%= f.text_field :author, class: 'form-control' %>
 
-      <%= f.label :publisher %>
-      <%= f.text_field :publisher, class: 'form-control' %>
+        <%= f.label :publisher %>
+        <%= f.text_field :publisher, class: 'form-control' %>
 
-      <%= f.label :genre %>
-      <%= f.text_field :genre, class: 'form-control' %>
+        <%= f.label :genre %>
+        <%= f.text_field :genre, class: 'form-control' %>
 
-      <%= f.submit "Update Book Information", class: "btn btn-primary" %>
-    <% end %>
+        <%= f.submit "Update Book Information", class: "btn btn-primary" %>
+      <% end %>
+    
 
+    </div>
   </div>
-</div>
+
+  <%= else %>
+    redirect_to root_path
+
+  <%= end %>
