--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
-          <li><%= link_to "Home", index_path %></li>
+          <li><%= link_to "Home", root_path %></li>
           <li><%=link_to "#{session[:name]}さん",current_user%>/li>
           <li>
               <%= link_to "Log out", logout_path, method: :delete %>
