--- a/app/views/books/list.html.erb
+++ b/app/views/books/list.html.erb
@@ -12,7 +12,7 @@
         <% end %>
         
         <%= will_paginate %>
-        <table>
+        <table border="1" style="border-collapse: collapse">
         <tr>
             <th>id</th>
             <th>title</th>
