--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,7 +6,7 @@
             <div class="container">
                 
 
-                <table>
+                <table border="1" style="border-collapse: collapse">
                     <tr>
                         <th>title</th>
                         <th>author</th>
